    Los proyectiles de las torres presentan un nuevo desafío. Debo pensar como plantearlo.
23/01/23
    Spritesheets para todos los enemigos.
    Nueva clase WaveManager para gestionar comodamente las oleadas.
    Los enemigos ahora desaparecen al llegar al final del nivel.
    Limpieza general de código en las clases de Enemy y derivadas.
24/01/23
    Spritesheets para todas las torres.
    Definición de clases para las torres WitchTower, StickyTower y CyclopTower, con sus correspondientes estadísticas en Stats.
28/01/23
    Los proyectiles de las torres, tras mucho esfuerzo, vuelan gracilmente de la torre a su objetivo sin problema. Un hurra para mí.
    Prueba y error para encontrar un balance provisional para las stats de las torres. Necesitaré seguir toqueteandolo a medida que avanza el desarrollo.
30/01/23
    He descubierto una forma de aprovechar mejor libGDX y la gestión de eventos sin tantas clases auxiliares gracias a las clases Stage y Actor propias del framework.
    El core gameplay más básico esta listo: Los enemigos se mueven, las torres disparan, el jugador puede construir nuevas torres.
    Añadida la clase GameUi para gestionar las acciones del jugador, botones y demás.
    ¿Como va a ser el menu desplegable para seleccionar que torreta construir? Probablemente use una table de libgdx con cuatro botones, pero a ver como se porta.
01/02/23
    Terminado el menu desplegable de construcción de torreta! Excepto que no es desplegable. Pero es perfectamente funcional!
    Haciendo el menu de construcción de torres, me preocupa que los botones sean demasiado pequeños así que los hago más grandes.
    Es demasiado fácil construir una torre encima de otra por error, voy a meter un botón de "destruir" en función de que el fundation tenga o no tenga torre.
03/02/23
    Botón para destruir torre (DestroyButton) añadido! Devuelve la mitad del coste original de la torre y despeja el fundation para poder construir una nueva torre.