@@ -1,0 +1,7 @@
+gameName=TPK
+gameFullName=Total Party Kill
+
+score=Score: {0}
+gold=Gold: {0}
+lifes=Lifes: {0}
+loot=Loot: {0}
