@@ -1,0 +1,4 @@
+score=Puntos: {0}
+gold=Oro: {0}
+lifes=Vidas: {0}
+loot=Botin: {0}
